--- a/apps/web/src/app/style/staff/pages-e.module.css
+++ b/apps/web/src/app/style/staff/pages-e.module.css
@@ -122,7 +122,7 @@
 
 .pfStatValue {
   font-family: var(--font-syne), sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: 800;
   line-height: 1;
   color: var(--text);
@@ -389,7 +389,7 @@
 
 .mcStatValue {
   font-family: var(--font-syne), sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: 800;
   line-height: 1;
   color: var(--text);
@@ -565,7 +565,7 @@
 
 .anlMetricValue {
   font-family: var(--font-syne), sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: 800;
   line-height: 1;
   color: var(--text);
@@ -709,7 +709,7 @@
 
 .rptStatValue {
   font-family: var(--font-syne), sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: 800;
   line-height: 1;
   color: var(--text);
@@ -1167,7 +1167,7 @@
 
 .mobStatValue {
   font-family: var(--font-syne), sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: 800;
   line-height: 1;
   color: var(--text);
@@ -1370,7 +1370,7 @@
 
 .empStatValue {
   font-family: var(--font-syne), sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: 800;
   line-height: 1;
   color: var(--text);
@@ -1663,7 +1663,7 @@
 
 .mlvStatValue {
   font-family: var(--font-syne), sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: 800;
   line-height: 1;
   color: var(--text);
@@ -1926,7 +1926,7 @@
 
 .mllStatValue {
   font-family: var(--font-syne), sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: 800;
   line-height: 1;
   color: var(--text);
@@ -2131,7 +2131,7 @@
 
 .enpStatValue {
   font-family: var(--font-syne), sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: 800;
   line-height: 1;
   color: var(--text);
@@ -2355,7 +2355,7 @@
 
 .tlStatValue {
   font-family: var(--font-syne), sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: 800;
   line-height: 1;
   color: var(--text);
